<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string translatable="false"  name="game_services_ads_id">ca-app-pub-5042729416879007~6841214599</string>
    <string translatable="false"  name="game_services_project_id">320065550513</string>

    <string-array name="teams_array">
        <item>Green</item>
        <item>Blue</item>
        <item>Red</item>
        <item>Cyan</item>
        <item>Yellow</item>
        <item>Magenta</item>
    </string-array>
    <string-array name="maps_array">
        <item>Random</item>
        <item>Pine</item>
        <item>White Ovals</item>
        <item>Pine 2</item>
        <item>Backing Pine</item>
        <item>Empty</item>
        <item>Arch Linux</item>
        <item>Red Line Bits</item>
        <item>Oval</item>
        <item>Inverted Oval</item>
        <item>Liquid Wars</item>
        <item>Symmetry</item>
        <item>Small Maze</item>
        <item>Green Silhouettes</item>
        <item>Red Triangles</item>
        <item>Liquid Wars Soup</item>
        <item>Green Rectangles</item>
        <item>Green</item>
        <item>Eye</item>
        <item>Dots</item>
        <item>Big Dots</item>
        <item>Diamonds</item>
        <item>Purple Curves</item>
        <item>Sharp Squiggle</item>
        <item>Dividers</item>
        <item>Back and Forth</item>
        <item>Jagged Boxes</item>
        <item>Wavy</item>
        <item>Nests</item>
        <item>Red</item>
        <item>Gaps</item>
        <item>Medium Maze</item>
        <item>Big Maze</item>
        <item>Medium Maze 2</item>
        <item>Medium Maze 3</item>
        <item>Team Colours</item>
        <item>Stars</item>
        <item>Skull</item>
        <item>ABC</item>
        <item>Eyes</item>
        <item>Mandelbrot</item>
        <item>Crossword</item>
        <item>Safari</item>
        <item>Smilies</item>
        <item>Stained Glass</item>
        <item>Circles</item>
        <item>Shapes</item>
    </string-array>
    <string-array name="timeout_array">
        <item>30 Seconds</item>
        <item>1 Minute</item>
        <item>2 Minutes</item>
        <item>3 Minutes</item>
        <item>5 Minutes</item>
        <item>10 Minutes</item>
        <item>23 Days</item>
    </string-array>
    <string-array translatable="false" name="teamsize_array">
        <item>100</item>
        <item>200</item>
        <item>400</item>
        <item>800</item>
        <item>1000</item>
        <item>1500</item>
        <item>2000</item>
        <item>3000</item>
        <item>4500</item>
    </string-array>
    <string name="team">Team:</string>
    <string name="time_limit">Time Limit:</string>
    <string name="team_size">Team Size:</string>
    <string name="map">Map:</string>
    <string name="single_player_game">Single Player Game</string>
    <string name="multiplayer_game">Multiplayer Game</string>
    <string name="how_to_play">How To Play</string>
    <string name="public_name">Public Name:</string>
    <string name="start">Start</string>
    <string name="connect_to_game">Connect To Game</string>
    <string name="start_new_game">Start New Game</string>
    <string name="instructions_one">Goal:\nConvert the enemy\'s army to your own to win.</string>
    <string name="instructions_two">How to play:\nWherever you touch the screen or moving your mouse pointer your army will run to. Use up to five fingers (mouse pointer can\'t do this) to guide your army. Enemy liquid will be converted to your own when they collide. Try to surround the enemy for the best effect.</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
</resources>
