<?xml version="1.0" encoding="utf-8"?>
<ScrollView
xmlns:android="http://schemas.android.com/apk/res/android"
android:layout_width="fill_parent"
android:layout_height="fill_parent">
<LinearLayout
    android:orientation="vertical"
android:layout_width="fill_parent"
android:layout_height="wrap_content"
android:gravity="center_horizontal">

    <View
    android:layout_width="fill_parent"
    android:layout_height="1px"
    android:layout_margin="10sp"
    android:background="#999"/>

    <LinearLayout
        android:orientation="horizontal"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

        <TableLayout
            android:orientation="vertical"
        android:layout_width="0sp"
        android:layout_height="wrap_content"
        android:layout_weight="0.75"
        android:stretchColumns="*">

            <TableRow>

                <TextView
                android:text="@string/team"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textSize="25sp"/>

                <Spinner
                android:id="@+id/team_spinner"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:spinnerMode="dialog"/>

            </TableRow>

            <TableRow>

                <TextView
                android:text="@string/time_limit"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textSize="25sp"/>

                <Spinner
                android:id="@+id/timeout_spinner"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:spinnerMode="dialog"/>

            </TableRow>

            <TableRow>

                <TextView
                android:text="@string/team_size"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textSize="25sp"/>

                <Spinner
                android:id="@+id/teamsize_spinner"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:spinnerMode="dialog"/>

            </TableRow>

            <TableRow>

                <TextView
                android:text="@string/map"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textSize="25sp"/>

                <Spinner
                android:id="@+id/map_spinner"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:spinnerMode="dialog"/>

            </TableRow>

        </TableLayout>

        <Button
        android:id="@+id/start_button"
        android:layout_width="0sp"
        android:layout_height="fill_parent"
        android:layout_weight="0.25"
        android:text="@string/start"
        android:onClick="start"/>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
    android:layout_width="fill_parent"
    android:layout_height="150sp"
    android:gravity="center">

        <Button
        android:id="@+id/previous_button"
        android:layout_width="0sp"
        android:layout_height="fill_parent"
        android:layout_weight="0.15"
        android:drawableStart="@drawable/arrow_left"
        android:onClick="previousMap"/>

        <ImageView
        android:id="@+id/map_imageview"
        android:layout_width="0sp"
        android:layout_height="fill_parent"
        android:layout_weight="0.7"/>

        <Button
        android:id="@+id/next_button"
        android:layout_width="0sp"
        android:layout_height="fill_parent"
        android:layout_weight="0.15"
        android:drawableEnd="@drawable/arrow_right"
        android:onClick="nextMap"/>

    </LinearLayout>

    <View
    android:layout_width="fill_parent"
    android:layout_height="1px"
    android:layout_margin="10sp"
    android:background="#999"/>

</LinearLayout>
</ScrollView>
