<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="8sp">

        <TextView
            android:id="@+id/multi_game_textview"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="horizontal"
            android:paddingBottom="8sp">

            <TableLayout
                android:layout_width="0sp"
                android:layout_height="wrap_content"
                android:layout_weight="0.75"
                android:orientation="vertical"
                android:stretchColumns="*">

                <TableRow>

                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/public_name" />

                    <TextView
                        android:id="@+id/public_name_textview"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:clickable="true"
                        android:onClick="changePublicName"
                        android:paddingEnd="20sp"
                        android:text="" />

                </TableRow>

                <TableRow>

                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/team" />

                    <TextView
                        android:id="@+id/team_textview"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:onClick="changeTeam"
                        android:text="" />

                </TableRow>

                <TableRow>

                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/team_size" />

                    <Spinner
                        android:id="@+id/timeout_spinner"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:spinnerMode="dialog" />

                </TableRow>

                <TableRow>

                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/team_size" />

                    <Spinner
                        android:id="@+id/teamsize_spinner"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:spinnerMode="dialog" />

                </TableRow>

                <TableRow>

                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/map" />

                    <Spinner
                        android:id="@+id/map_spinner"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:spinnerMode="dialog" />

                </TableRow>

            </TableLayout>

            <com.google.android.material.button.MaterialButton
                style="@style/Theme.Button.Primary"
                android:id="@+id/start_button"
                android:layout_width="0sp"
                android:layout_height="fill_parent"
                android:layout_weight="0.25"
                android:onClick="start"
                android:text="@string/start" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="150sp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                style="@style/Theme.Button.Outlined"
                android:id="@+id/previous_button"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_weight="0.2"
                android:onClick="previousMap"
                android:scaleType="centerInside"
                android:textSize="30sp"
                android:text="Prev"
                tools:ignore="NestedWeights" />


            <ImageView
                android:id="@+id/map_imageview"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_weight="1" />

            <com.google.android.material.button.MaterialButton
                style="@style/Theme.Button.Outlined"
                android:id="@+id/next_button"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_weight="0.2"
                android:onClick="nextMap"
                android:scaleType="centerInside"
                android:textSize="30sp"
                android:text="Next"/>

        </LinearLayout>
    </LinearLayout>
</LinearLayout>
